добавил про sgs3

--- a/source/posts/2012-05-04.md
+++ b/source/posts/2012-05-04.md
@@ -17,6 +17,7 @@
 
 
 ## Для всех
+* [Самсунг запустили нового флагмана: Samsung Galaxy S III](http://techcrunch.com/2012/05/03/samsung-galaxy-s-iii-officia/). Самое важное - поддержка ГЛОНАС!!!111. Ну и там почти 5" 720p экран, новый процессор, BlueTooth 4 и всё такое. В общем, скорее всего, это новый флагман андроидостроения, да еще с толстой батарейкой.
 * [Майкрософта наняла еще 14 выходцев из Яху, для запуска новой лаборатории в NY](http://allthingsd.com/20120502/microsoft-hires-14-yahoo-researchers-to-kickstart-new-nyc-research-lab/). Что еще раз говорит - дни славы Яху далеко позади. Жаль, хорошая была компания. Ну, да зато в новом майкрософте теперь все отлично. Мне нравится. {ms} {yahoo}
 * [Интересный экстеншн для хрома - Language Immersion](https://chrome.google.com/webstore/detail/bedbecnakfcpmkpddjfnfihogkaggkhl). Для тех, кто хочет между делом еще и иностранный язык изучать. Когда же уже люди придумают хороший, не разрушающий мозг, способ расширять браузер. {browser}
 * [Хотите работать с хорошими программистами? Тогда **платите** им!](http://www.irrlicht3d.org/pivot/entry.php?id=1295) Очень верное замечание. Я прямо сейчас участвую в 3 очень интересных проектах. И в каждом есть сильный человек, отвечающий за технологическую сторону. Обычно это единственный человек в проекте, который получает зарплату. Потому что только программист должен работать над проектом фултайм. {startup}
