--- a/source/posts/2012-05-04.md
+++ b/source/posts/2012-05-04.md
@@ -15,9 +15,10 @@
 В общем, остается пожелать ребятам много-много удачи, потому что такие крутые проекты на энтузиазме - большая редкость.
 Глядишь, когда-нибудь он и деньги зарабатывать начнет.
 
+-----
 
 ## Для всех
-* [Самсунг запустили нового флагмана: Samsung Galaxy S III](http://techcrunch.com/2012/05/03/samsung-galaxy-s-iii-officia/). Самое важное - поддержка ГЛОНАС!!!111. Ну и там почти 5" 720p экран, новый процессор, BlueTooth 4 и всё такое. В общем, скорее всего, это новый флагман андроидостроения, да еще с толстой батарейкой. А, ну и конечно, тут тоже встроен "полный аналог Siri", как заявляют все поклонники андроида.
+* [Самсунг запустили нового флагмана: Samsung Galaxy S III](http://techcrunch.com/2012/05/03/samsung-galaxy-s-iii-officia/). Самое важное - поддержка ГЛОНАС!!!111. Ну и там почти 5" 720p экран, новый процессор, BlueTooth 4 и всё такое. В общем, скорее всего, это новый флагман андроидостроения, да еще с толстой батарейкой. А, ну и конечно, тут тоже встроен "полный аналог Siri", как заявляют все поклонники андроида. {mobile} {samsung} {android}
 * [Майкрософта наняла еще 14 выходцев из Яху, для запуска новой лаборатории в NY](http://allthingsd.com/20120502/microsoft-hires-14-yahoo-researchers-to-kickstart-new-nyc-research-lab/). Что еще раз говорит - дни славы Яху далеко позади. Жаль, хорошая была компания. Ну, да зато в новом майкрософте теперь все отлично. Мне нравится. {ms} {yahoo}
 * [Интересный экстеншн для хрома - Language Immersion](https://chrome.google.com/webstore/detail/bedbecnakfcpmkpddjfnfihogkaggkhl). Для тех, кто хочет между делом еще и иностранный язык изучать. Когда же уже люди придумают хороший, не разрушающий мозг, способ расширять браузер. {browser}
 * [Хотите работать с хорошими программистами? Тогда **платите** им!](http://www.irrlicht3d.org/pivot/entry.php?id=1295) Очень верное замечание. Я прямо сейчас участвую в 3 очень интересных проектах. И в каждом есть сильный человек, отвечающий за технологическую сторону. Обычно это единственный человек в проекте, который получает зарплату. Потому что только программист должен работать над проектом фултайм. {startup}
@@ -43,6 +44,7 @@
 
 ## Для гиков
 * [Зарелизился PhoneGap 1.7.0, багфиксы и поддержка Bada 2.0](http://phonegap.com/2012/05/02/phonegap-1-7-0-released/). Пожалуй темпы разработки PhoneGap сейчас выше, чем у Titanium, или мне показалось? {html} {mobile}
+* [Длинный пост Гинека Шлавацка о том, как дистрибутировать питоновские библиотеки и программы с помощью нативных средств](http://hynek.me/articles/python-app-deployment-with-native-packages/). Очень-очень правильный текст "как зафигачить питон-программы в .deb средствами питона". Узнал много нового. Кажется даже кому-нибудь в Яндексе может пригодиться. {python} {unix}
 * [Крутая идея: создаешь пустой HTML шаблон, а fixie заполняет его картинками и текстом](http://fixiejs.com/). Вместо заливок тупым lorem ipsum - идеальная штука. {html}
 * [Очень простой SMTP сервер на питоне и  gevent'ах](https://github.com/kennethreitz/inbox.py), в стиле `requests` и прочих библиотек автора. {python}
 * [Персональный просмотрщик man-страниц](https://github.com/jimeh/manservant). На руби и синатре. Просто и красиво. {unix}
