--- a/source/posts/2012-05-04.md
+++ b/source/posts/2012-05-04.md
@@ -56,7 +56,7 @@
 * [В линкблоге о'Рейли Радар отличная подброка про функциональные языки](http://radar.oreilly.com/2012/05/functional-languages-functional-techniques.html). Кажется я последнее время только линкблоги и читаю. Эпидемия? Мода? :) {functional}
 
 ## Разное
-* [День, когда Солнце прикоснулось к Земле](http://arstechnica.com/science/news/2012/05/1859s-great-auroral-stormthe-week-the-sun-touched-the-earth.ars). Увлекательно о самой большой в документальной истории солнченой вспышке. Вам нравятся такие темы? Проголосуйте комментариями, прямо тут? {science}
+* [День, когда Солнце прикоснулось к Земле](http://arstechnica.com/science/news/2012/05/1859s-great-auroral-stormthe-week-the-sun-touched-the-earth.ars). Увлекательно о самой большой в документальной истории солнечной вспышке. Вам нравятся такие темы? Проголосуйте комментариями, прямо тут? {science}
 * [Снятые на 300fps гонки супермото](http://vimeo.com/40853735). Мотоциклы и технологии - вместе веселее. {video}
 * [Тумблер с анимированными гифками про стартапы](http://runningastartup.tumblr.com/). Мой любимый - самый первый. {startup}
 * [3 минуты видео с TED: как правильно завязывать шнурки](http://www.ted.com/talks/terry_moore_how_to_tie_your_shoes.html). Я примерно так и завязывал всегда. А вы? {video} {fun}
