--- a/source/posts/2012-05-02.md
+++ b/source/posts/2012-05-02.md
@@ -4,7 +4,7 @@
 
 ![kartinka](http://addmeto.cc/images/posts/study.jpg)
 
-Два крутейших вуза США -  [Harvard и MIT, договорились о совместном дистанционном обучении](http://web.mit.edu/press/2012/mit-harvard-edx-announcement.html). Но не в том смысле, в котором все сразу подумали. Они договорилсь о том, чтобы студенты Гарварда могли дистанционно учиться в MIT и наоборот. Смысл в том, чтобы дать учащимся одного вуза брать дополнительные лекции и занятия в другом вузе.
+Два крутейших вуза США -  [Harvard и MIT, договорились о совместном дистанционном обучении](http://web.mit.edu/press/2012/mit-harvard-edx-announcement.html). Но не в том смысле, в котором все сразу подумали. Они договорились о том, чтобы студенты Гарварда могли дистанционно учиться в MIT и наоборот. Смысл в том, чтобы дать учащимся одного вуза брать дополнительные лекции и занятия в другом вузе.
 
 Когда я это прочитал, я начал очень жалеть что не родился на 30 лет позднее. Вы понимаете, насколько это крутая задумка? Сохраняются ВСЕ плюсы обычного, очного обучения - и совместная работа с другими учащимися, и ритмичность, и вписанность всех занятий в общий учебный процесс. По сути, ВУЗ разбивается на две части, обслуживающую (кампусы, классы, работа со студентами) и учебную (лекции, занятия, конкурсы). Таким образом, лет через 20 ты будешь выбирать обслуживающую часть для житья и учебную для знаний. И всё это будет РАЗДЕЛЬНО. Ты по-прежнему сможешь учиться и жить в Гарварде. А можешь жить в Гарварде, учиться там бизнесу, а все знания по IT получать в Массачусетсе.
 
@@ -14,7 +14,7 @@
 
 ## Для всех
 * [Firefox Australis: новые прототипы нового интерфейса Firefox](http://www.extremetech.com/computing/128161-firefox-australis-one-browser-interface-to-rule-them-all). Чтобы вы долго не искали: [живое демо интерфейса](http://people.mozilla.com/~shorlander/files/australis-designSpecs/australis-designSpecs-osx-mainWindow.html). У меня заработало только в Firefox, конечно. Очень крутой интерфейс будет. Части его уже сейчас в Mozilla Nightly, моём браузере-фаворите. [Еще один интересный обзор этого интерфейса](http://www.webmonkey.com/2012/05/new-firefox-design-will-offer-uniform-look-across-desktop-and-mobile/). {browser}
-* [Катерина Фейк не может летать самолетами Северозападных авиалиний](http://caterina.net/archive/001011.html). Догадайтесь почему? Ну да, потому же, почему тяжела жизнь Василия Пупкина и Рональда Налла. Взять себе фамилию «Тест» чтоли? {fun}
+* [Катерина Фейк не может летать самолетами Северозападных авиалиний](http://caterina.net/archive/001011.html). Догадайтесь почему? Ну да, потому же, почему тяжела жизнь Василия Пупкина и Рональда Налла. Взять себе фамилию «Тест» что ли? {fun}
 * [Гугл совершил большую и надоедливую ошибку](http://wilwheaton.typepad.com/wwdnbackup/2012/05/google-is-making-a-huge-and-annoying-mistake.html), считают сотни блоггеров по всему миру. А причина всего лишь добавление кнопки "G+ Like" на youtube. {hate}
 * [Европейский суд, кажется, решил, что Оракл зря наезжает на Гугл](http://www.groklaw.net/article.php?story=20120502083035371), пишет нам Грокло. Там как раз решили, что не бывает патентов на языки программирования или функции компьютера. Выводы: реверс инжиниринг разрешен, API не может быть закопирайчено. {patent}
 * [Между тем, Майкрософт и Гугл (в лице Мотороллы) бьются в Германии за продукты XBox и Windows7](http://www.bbc.com/news/technology-17924190). Европа, кажется, притязания уже отвергла, слушание в штатах будет 7 мая. {patent}
