--- a/source/posts/2012-05-08.md
+++ b/source/posts/2012-05-08.md
@@ -54,6 +54,6 @@
 ## Разное
 * [Религиозные сайты являются распространителями вирусов чаще, чем порносайты](http://mashable.com/2012/05/03/religious-sites-malware-study/). Я всегда знал что порно - лучше презервативов! {security} {fun}
 
-*Сегодня у многих из вас обновились старые посты в RSS. Это потому, что в них поправилась орфография. Это хорошо и правильно, напоминаю, что любой может поправить [тут, на гитхабе](https://github.com/bobuk/addmeto.cc/tree/master/source/posts). Пожалуйста, не стесняйтесь присылать пуллреквесты.
+*Сегодня у многих из вас обновились старые посты в RSS. Это потому, что в них поправилась орфография. Это хорошо и правильно, напоминаю, что любой может поправить [тут, на гитхабе](https://github.com/bobuk/addmeto.cc/tree/master/source/posts). Пожалуйста, не стесняйтесь присылать пуллреквесты.*
 
 *А, и не обращайте внимания, что блог стал выходить реже. Он выходит только в те дни, когда я работаю, а в России сейчас длинные выходные.*
