--- a/source/posts/2012-05-08.md
+++ b/source/posts/2012-05-08.md
@@ -42,7 +42,7 @@
 * [Новый почтовый клиент для Linux: Geary](http://omgubuntu.co.uk/2012/05/new-e-mail-client-geary-launches-on-linux/). Очень красивый, почти всё правильно переперто из Mail.app {opensource} {mail}
 
 ## Для гиков
-* [Отличный тест для гиков, определи на каком языке написан ХеллоВорлд](www.infoworld.com/d/application-development/hello-world-programming-languages-quiz-188874). {code} {fun}
+* [Отличный тест для гиков, определи на каком языке написан ХеллоВорлд](http://www.infoworld.com/d/application-development/hello-world-programming-languages-quiz-188874). {code} {fun}
 * [Твиттер выложил свою библиотеку по работе с текстом на objective c](https://github.com/twitter/twitter-text-objc). {twitter} {objc}
 * [В OSX 10.7 есть забавный баг, в некотором случае логин и пароль засвечиваются в логе прямым текстом](http://mashable.com/2012/05/07/os-x-lion-flaw-passwords/). Чем дальше, тем чудесатее. {osx} {security}
 * [Сайт git-scm обновился радикально. Вместе с ним pro git стал официальной книгой по git'у](https://github.com/blog/1125-new-git-homepage). Кстати, сорсы сайта git-scm доступны на гитхабе. {git} {github}
