--- a/source/posts/2012-05-08.md
+++ b/source/posts/2012-05-08.md
@@ -27,7 +27,7 @@
 
 ## Для всех
 * [Отличный пост Твиттера "Инновации через Эксперименты"](http://blog.twitter.com/2012/05/innovate-through-experimentation.html). {twitter}
-* [20 принципов пользовательского дизайна](http://bokardo.com/principles-of-user-interface-design/). Очевидные, но прекрасные коаны. {design}
+* [20 принципов пользовательского дизайна](http://bokardo.com/principles-of-user-interface-design/). Очевидные, но прекрасные каноны. {design}
 * [Почему паблишеры не любят создавать приложения](http://www.technologyreview.com/business/40319/). Я, конечно, не согласен с автором статьи. Паблишеры не любят приложения потому, что ненавидят делиться прибылью! :) {mobile}
 * [В продолжение предыдущей истории, люди перестают пользоваться Facebook Social Reading](http://www.buzzfeed.com/jwherrman/facebook-social-readers-are-all-collapsing), так что у паблишеров и с фейсбуком проблемы. {facebook}
 * [Твиттер обновил свою мобильную версию](http://thenextweb.com/twitter/2012/05/07/twitter-is-looking-at-emerging-markets-with-new-mobile-web-version/) и стало сильно лучше. Теперь мобильная версия сайта выглядит как мобильный клиент. Говорят, это чтобы расшириться на рынках, где много-много мобильного интернета. {twitter} {mobile}
