Исправлена опечатка приходит -> подходит в заметке про Bushi.do

--- a/source/posts/2012-05-08.md
+++ b/source/posts/2012-05-08.md
@@ -34,7 +34,7 @@
 * [Evernote прикупили программу для рукописного ввода, Penultimate](http://blog.evernote.com/2012/05/07/evernote-acquires-penultimate/). Очень приятно видеть, как расширяется Evernote. Хотя я так и не заставил себя им пользоваться. {evernote} {mobile}
 
 ## На грани
-* [Bushi.do переименовался в Cloudfuji и выпустил прекрасный опенсорсный веб-чат](http://cloudfuji.com/blog/2012/05/07/launching_cloudfuji.html). Отлично приходит для групповой работы. Я большой фанат KickOff, но, кажется Kandan мог бы составить ему конкуренцию в некоторых местах. {code} {groupwork}
+* [Bushi.do переименовался в Cloudfuji и выпустил прекрасный опенсорсный веб-чат](http://cloudfuji.com/blog/2012/05/07/launching_cloudfuji.html). Отлично подходит для групповой работы. Я большой фанат KickOff, но, кажется Kandan мог бы составить ему конкуренцию в некоторых местах. {code} {groupwork}
 * [Прекрасный пример того, как Флипбоард повлиял на интернет](http://tympanus.net/codrops/2012/05/07/experimental-page-layout-inspired-by-flipboard/). Удобный лейаут в стиле флипбоарда, но для веба. Хозяйке на заметку. {html} {design}
 * [7 инструментов для начинающих разработчиков мобильных приложений](http://mashable.com/2012/05/07/tools-mobile-app-development/). Я бы сказал 7 сервисов, которыми вам стоит воспользоваться. {mobile}
 * [Делл собирается выпустить Project Sputnik](http://bartongeorge.net/2012/05/07/introducing-project-sputnik-developer-laptop/). Это их видение каким должен быть ноутбук для девелопера. На основе XPS13 и свежей ubuntu. Правильной дорогой идут, товарищи! {hardware} {dell} {ubuntu}
