Опечатка: отака -> атака

--- a/source/posts/ustream-2012-05-09.md
+++ b/source/posts/ustream-2012-05-09.md
@@ -2,7 +2,7 @@
 
 ![картинка](http://tctechcrunch2011.files.wordpress.com/2011/10/ustreamlogo.png?w=288)
 
-Ustream опубликовал детали DDoS отаки, которой сейчас подвергается он, а так же сервис Bambuser.
+Ustream опубликовал детали DDoS атаки, которой сейчас подвергается он, а так же сервис Bambuser.
 
 Представитель Ustream заявил, что атака была нацелена на пользователя `“reggamortis1″`, канал известного протестующего. "Он транслировал видео с места пикета возле метро "Китай-Город" в Москве". Ustream так же утверждают, что это третья серьезная атака за последние 6 месяцев, связанная с русскими гражданскими журналистами, и самая большая атака в их истории. Сейчас сайт потихоньку поднимается.
 
