--- a/source/posts/ustream-2012-05-09.md
+++ b/source/posts/ustream-2012-05-09.md
@@ -8,10 +8,10 @@ Ustream опубликовал детали DDoS атаки, которой се
 
 Детали:
 
-* Ustream говорят что DDoS начался в 5:30 am ET (2:30 pm по Москве), с аттаки, нацеленной на канал ReggaMortis1.
-* так же они говорять что никогда не видели аттаки такого масштаба на их датацентры по всему миру
-* Аттаки идут приимущественно из России, Казахстана и Ирана "с тысяч отдельных IP адресов"
-* В настоящий момент ребята из Ustream борются с нагрузкой, чтобы смягчить влияние аттак. “Наш сервис очень тормозит, но частично работает” - пишет компания в своем заявлении.
+* Ustream говорят, что DDoS начался в 5:30 am ET (2:30 pm по Москве) с атаки, нацеленной на канал ReggaMortis1.
+* также они говорят, что никогда не видели атаки такого масштаба на их датацентры по всему миру
+* Атаки идут приимущественно из России, Казахстана и Ирана "с тысяч отдельных IP адресов"
+* В настоящий момент ребята из Ustream борются с нагрузкой, чтобы смягчить влияние атак. “Наш сервис очень тормозит, но частично работает” - пишет компания в своем заявлении.
 
 Ustream это самая большая в мире платформа для стриминга видео, с 55 миллионами уникальных посетителей в месяц. Это открытая платформа, позволяющая работать с ней не только любителям, но и профессионалам. Более 125 часов видео заливается ежеминутно и 10000 трансляций идет единовременно. Всё это говорит о том, что нынешний DDoS представляет собой значительную часть обычной нагрузки.
 
