--- a/source/posts/ustream-2012-05-09.md
+++ b/source/posts/ustream-2012-05-09.md
@@ -13,8 +13,8 @@ Ustream опубликовал детали DDoS атаки, которой се
 * Атаки идут приимущественно из России, Казахстана и Ирана "с тысяч отдельных IP адресов"
 * В настоящий момент ребята из Ustream борются с нагрузкой, чтобы смягчить влияние атак. “Наш сервис очень тормозит, но частично работает” - пишет компания в своем заявлении.
 
-Ustream это самая большая в мире платформа для стриминга видео, с 55 миллионами уникальных посетителей в месяц. Это открытая платформа, позволяющая работать с ней не только любителям, но и профессионалам. Более 125 часов видео заливается ежеминутно и 10000 трансляций идет единовременно. Всё это говорит о том, что нынешний DDoS представляет собой значительную часть обычной нагрузки.
+Ustream - это самая большая в мире платформа для стриминга видео, с 55 миллионами уникальных посетителей в месяц. Это открытая платформа, позволяющая работать с ней не только любителям, но и профессионалам. Более 125 часов видео заливается ежеминутно и 10000 трансляций идет единовременно. Всё это говорит о том, что нынешний DDoS представляет собой значительную часть обычной нагрузки.
 
-Возможно в связи с этим, одна из груп, связанных с Anonymous сегодня утверждали, что проводят (ответную) атаку на Кремль.
+Возможно, в связи с этим, одна из груп, связанных с Anonymous сегодня утверждали, что проводят (ответную) атаку на Кремль.
 
 [Это очень беглый перевод заметки на ТекКранч](http://techcrunch.com/2012/05/09/ustream-says-russian-citizen-journalist-is-the-focus-of-todays-ddos-attack/)
