--- a/source/posts/ustream-2012-05-09.md
+++ b/source/posts/ustream-2012-05-09.md
@@ -15,6 +15,6 @@ Ustream опубликовал детали DDoS атаки, которой се
 
 Ustream - это самая большая в мире платформа для стриминга видео, с 55 миллионами уникальных посетителей в месяц. Это открытая платформа, позволяющая работать с ней не только любителям, но и профессионалам. Более 125 часов видео заливается ежеминутно и 10000 трансляций идет единовременно. Всё это говорит о том, что нынешний DDoS представляет собой значительную часть обычной нагрузки.
 
-Возможно, в связи с этим, одна из груп, связанных с Anonymous сегодня утверждали, что проводят (ответную) атаку на Кремль.
+Возможно, в связи с этим, одна из групп, связанных с Anonymous сегодня утверждали, что проводят (ответную) атаку на Кремль.
 
 [Это очень беглый перевод заметки на ТекКранч](http://techcrunch.com/2012/05/09/ustream-says-russian-citizen-journalist-is-the-focus-of-todays-ddos-attack/)
