--- a/source/posts/2012-05-10.md
+++ b/source/posts/2012-05-10.md
@@ -37,4 +37,4 @@
 * [И там же, на мэшбл, производители порно подали в суд на Tumblr](http://mashable.com/2012/05/09/porn-tumblr-copyright/). Как производители порно могут подать на кого-то в суд и почему их самих не посадят? {fun} {pr0n}
 * [Выучить китайский за три минуты](http://blog.memrise.com/2011/11/learn-to-read-a-sentence-of-chinese-in-3-minutes.html). Ну, ладно, конечно это шутка. {fun}
 
-*P.S. присылайте ссылки и темы ня. А то я один не всегда справляюсь, статьи же длинные, а у меня всего час в день!*
+*P.S. присылайте ссылки и темы дня. А то я один не всегда справляюсь, статьи же длинные, а у меня всего час в день!*
