--- a/source/posts/2012-05-10.md
+++ b/source/posts/2012-05-10.md
@@ -5,12 +5,13 @@
 ## Для всех
 * [Swiftype: правильно реализованный поиск по сайту](http://swiftype.com/) - еще одно доказательство того, что маленькие стартапы могут уделывать большие корпорации. Работает лучше, чем поиски по сайту гугла и Яндекса. {google} {yandex} {search}
 * [У форсквера появился план, как зарабатывать деньги: Promoted Specials](http://mashable.com/2012/05/09/foursquares-plan-for-making-money/). {foursquare} {startup}
-* [А фейсбук решил выступать и как магазин платных приложений](http://techcrunch.com/2012/05/09/facebook-will-start-offering-paid-apps-beta-program-starts-now/). Чтож, это вполне логично, эппл всем показала как это работает. {facebook} {startup}
+* [А фейсбук решил выступать и как магазин платных приложений](http://techcrunch.com/2012/05/09/facebook-will-start-offering-paid-apps-beta-program-starts-now/). Чтож, это вполне логично, эппл всем показала как это работает. [А вот и официальная заметка от FB](http://developers.facebook.com/blog/post/2012/05/09/introducing-the-app-center/). {facebook} {startup}
 * [10 стартапов, которые изменили мир, и чему мы можем у них научиться](http://www.forbes.com/sites/ilyapozin/2012/05/09/10-startups-changing-the-world-and-what-we-can-learn-from-them/). Я балбес и 2 из 10 просто не знал. {startup}
 * [и топ 50 опенсорсных компаний](http://www.thevarguy.com/2012/05/09/top-50-open-source-companies-where-are-they-now/), а так же чем они сейчас занимаются. К своему стыду не знал и половины названий. {startup}
 * [Google Places шагает по планете. Теперь в плейсесах можно управлять данными всей своей сети магазинов сразу](http://searchengineland.com/google-places-launches-new-bulk-listing-management-tool-120552). {google}
 * [Интересная статья на tnw об аномальной популярности IE9 на выходных](http://thenextweb.com/microsoft/2012/05/08/ie9-more-popular-on-weekends-than-weeknights-breaking-with-ies-long-held-usage-patterns/). Особенно в статье удалась фотография Балмера! {ie9} {browser}
 * [Bing в порядке теста включил части людей "открывать ссылки в новом окне](http://news.cnet.com/8301-10805_3-57430936-75/many-users-not-keen-on-latest-microsoft-bing-search-test/). И люди были в шоке все. Странно, а в России Яндекс делает так с начала времен, а гугл - с 2008 года. И все довольны. {google} {bing} {search}
+* [В Эппл всё еще секут фишку. Сафари автоматически отключает старые, несекурные версии Флеша](http://www.loopinsight.com/2012/05/09/safari-update-automatically-disables-old-versions-of-flash/). При этом показывают сообщения "ваш флеш небезопасный, мы его выключили, если хотите - поставьте апдейт". Красивое решение, да? {browser} {flash}
 
 ## На грани
 * [Spire.io - очередной сервис для разработки "бессерверных приложений"](http://www.spire.io/). API красивый, но сам пока не попробовал. {code} {api} {html}
