--- a/source/posts/2012-05-14.md
+++ b/source/posts/2012-05-14.md
@@ -17,11 +17,11 @@
 * [Очень крутая штука - рекурсивное рисование](http://recursivedrawing.com/). Только сначала посмотрите видеоролик, а то ничего не понятно. Но потом... {fun} {art} {html}
 * [В следующем фаерфоксе поиск в гугле будет через HTTPS](https://blog.mozilla.org/privacy/2012/05/07/rolling-out-https-google-search/). Последствий больше, чем вы думаете. Например большая часть инструментов перестанет показывать, по какому запросу из гугла к вам на сайт пришел человек. {firefox} {https} {google}
 * [Майкрософт вложились в проект, который сможет убивать торренты! ШОК, ВИДЕО!](http://torrentfreak.com/microsoft-funded-startup-aims-to-kill-bittorrent-traffic-120513/). На самом деле проект просто пытается бороться с пиратством, это давно всем знакомый, русский Pirate Pay. И деньги там небольшие, MS дали $100k на развитие проекта. {ms} {torrent}
-* [Эйб Войлкер рассуждает о том, как было бы здорово, если бы законы писались коллективно, как программы на github](http://blog.abevoelker.com/gitlaw-github-for-laws-and-legal-documents-a-tourniquet-for-american-liberty/). Он даже предложил как это должно работать, этакий *GitLaw*. Идея красивая, только очень уж демократичная для того, чтобы быть воплощенной. {lawers} {github}
+* [Эйб Войлкер рассуждает о том, как было бы здорово, если бы законы писались коллективно, как программы на github](http://blog.abevoelker.com/gitlaw-github-for-laws-and-legal-documents-a-tourniquet-for-american-liberty/). Он даже предложил как это должно работать, этакий *GitLaw*. Идея красивая, только очень уж демократичная для того, чтобы быть воплощенной. {lawyers} {github}
 * [Отличный от других взгляд на то, как правильно скейлить команду разработки](http://adam.heroku.com/past/2011/4/28/scaling_a_development_team/). Я со многим согласен, очень даже. {team}
 * [Страсти вокруг кикстартера накаляются, Эван Наркисс выяснил, на что тратят полученные деньги разработчики Star Command](http://kotaku.com/5902280/what-the-hell-these-game-developers-did-with-your-kickstarter-money). Вкратце - на айпады для себя. {kickstarter} {ipad}
 * [Кстати, о кикстартере. Авторы IDE Light Table собрали необходимые им $200k](http://www.kickstarter.com/projects/ibdknox/light-table/backers). Я тоже немножечко дал. Теперь жду поддержки Python. {lighttable} {python} {kickstarter}
-* [Попробуйте сосредоточиться на своей задаче хотябы на 30 минут](http://mindfolder.com/blog/30-minutes-day/). Очень крутая и мотовирующая агитка за концентрацию. Попробуйте раз в день, на 30 минут сосредоточиться на чем-то, что действительно важно. {doit} {lifehack}
+* [Попробуйте сосредоточиться на своей задаче хотя бы на 30 минут](http://mindfolder.com/blog/30-minutes-day/). Очень крутая и мотовирующая агитка за концентрацию. Попробуйте раз в день, на 30 минут сосредоточиться на чем-то, что действительно важно. {doit} {lifehack}
 
 ## На грани
 * [Эмулятор GameBoy Color, написанный только на JavaScript](http://gamecenter.grantgalitz.org/index). Прошел первый уровень Mario, работает быстро. Какая же всё-таки мощь в нынешних машинках, если такие эмуляторы стало можно писать на интерпретируемых языках. {game} {html} {js}
@@ -41,7 +41,7 @@
 * [Очень интересное для меня сравнение производительности PyPy и CPython3.3](http://blog.behnel.de/index.php?p=210), через парсинг XML. {python} {code} {xml} {pypy}
 
 ## Разное
-* [Том Скотт нарисовал офигенное видео "the Singularity, ruined by lawyers"](http://www.tomscott.com/life/). Страшнаватая картинка будущего :( {video}
+* [Том Скотт нарисовал офигенное видео "the Singularity, ruined by lawyers"](http://www.tomscott.com/life/). Страшноватая картинка будущего :( {video}
 * [Ждите сегодня много психов и эмоций, к нам прилетел результат позавчерашней вспышки на солнце](http://earthsky.org/space/huge-sunspot-ar1476-turned-our-way-might-produce-x-flare). Картинки уж очень красивые, не смог удержаться. {science}
 
 *В ближайшие пару недель буду перепиливать бложек, появились новые идеи, ну и вообще. Буду рассказывать по ходу, наверное.*
