--- a/source/posts/2012-05-14.md
+++ b/source/posts/2012-05-14.md
@@ -21,7 +21,7 @@
 * [Отличный от других взгляд на то, как правильно скейлить команду разработки](http://adam.heroku.com/past/2011/4/28/scaling_a_development_team/). Я со многим согласен, очень даже. {team}
 * [Страсти вокруг кикстартера накаляются, Эван Наркисс выяснил, на что тратят полученные деньги разработчики Star Command](http://kotaku.com/5902280/what-the-hell-these-game-developers-did-with-your-kickstarter-money). Вкратце - на айпады для себя. {kickstarter} {ipad}
 * [Кстати, о кикстартере. Авторы IDE Light Table собрали необходимые им $200k](http://www.kickstarter.com/projects/ibdknox/light-table/backers). Я тоже немножечко дал. Теперь жду поддержки Python. {lighttable} {python} {kickstarter}
-* [Попробуйте сосредоточиться на своей задаче хотя бы на 30 минут](http://mindfolder.com/blog/30-minutes-day/). Очень крутая и мотовирующая агитка за концентрацию. Попробуйте раз в день, на 30 минут сосредоточиться на чем-то, что действительно важно. {doit} {lifehack}
+* [Попробуйте сосредоточиться на своей задаче хотя бы на 30 минут](http://mindfolder.com/blog/30-minutes-day/). Очень крутая и мотивирующая агитка за концентрацию. Попробуйте раз в день, на 30 минут сосредоточиться на чем-то, что действительно важно. {doit} {lifehack}
 
 ## На грани
 * [Эмулятор GameBoy Color, написанный только на JavaScript](http://gamecenter.grantgalitz.org/index). Прошел первый уровень Mario, работает быстро. Какая же всё-таки мощь в нынешних машинках, если такие эмуляторы стало можно писать на интерпретируемых языках. {game} {html} {js}
@@ -30,7 +30,7 @@
 * [На суперюзере разыскивают современный браузер, способный работать на Windows 3.1](http://superuser.com/questions/423061/is-there-a-modern-browser-that-runs-on-windows-3-1). Обратите внимание, даже не 3.11 :) {fun} {windows}
 
 ## Для гиков
-* [Ambrose: система риалтаймовой визуализации и мониторинга мапредьюса](https://github.com/twitter/ambrose). Очередная полезняшка от Twitter, красивая и полезная, блин, умеют люди. Пока работет только с Pig, обещают и Hive поддержать со временем. {hadoop} {twitter} {mapreduce} {pig} {hive}
+* [Ambrose: система риалтаймовой визуализации и мониторинга мапредьюса](https://github.com/twitter/ambrose). Очередная полезняшка от Twitter, красивая и полезная, блин, умеют люди. Пока работает только с Pig, обещают и Hive поддержать со временем. {hadoop} {twitter} {mapreduce} {pig} {hive}
 * [Simperium, универсальный сервис риалтаймовой синхронизации данных](https://simperium.com/). Мечтаю чтобы эппл дала такой доступ к iCloud. Ну блин, или сам напишу уже. {sync} {icloud}
 * [SchemaVerse - онлайновый мультиплейер про космос, написанный только на pgSql и Postgres](https://schemaverse.com/). Жуткая картинка, но затягивает же {game} {html} {postgres} {sql}
 * [Брэтт Кэннон о его взгляде и надеждах в отношении Dart](http://sayspy.blogspot.com/2012/05/my-very-shallow-thoughts-on-dart.html). Если вы его не знаете: это известный гугглер, один из давних коммитеров в питон. Кстати, название его блога *Coder Who Says Pi* это отсылка к одному из моих любимейших фильмов. Кто знает, какому? {python} {dart} {code}
