--- a/source/posts/2012-05-15.md
+++ b/source/posts/2012-05-15.md
@@ -43,4 +43,8 @@
 * [Язык программирования с неприличным названием `Hue`](http://rsms.me/2012/05/14/hue.html). Функциональный и компилируемый. Вот какие ката должен выполнять программист в свободное время! {hue} {fun}
 * [Сайт с научными опытами, которые можно попробовать дома](http://www.t2ah.com/). Почти все банальные и мало, но вот про виноград я не знал. {science} {fun}
 
-*P.S. Внезапно решил написать пост перед сном. Теперь спокойной ночи всем :-*
+*P.S. Внезапно решил написать пост перед сном. Теперь спокойной ночи всем :-)*
+
+*P.S. А еще, внезапно, сайт [Радио-Т](http://radio-t.com/) вчера стал недоступен для каждого 4го пользователя корбины-билайна. работы ведутся.*
+
+
