заполонилинтернет => заполонили интернет

--- a/source/posts/2012-05-15.md
+++ b/source/posts/2012-05-15.md
@@ -4,7 +4,7 @@
 
 >>![center](http://www.minecraftguide.info/wp-content/uploads/2011/03/anm_minecraft_header.png)<<
 
-Создатель майнкрафта, Нотч, стал своего рода легендой. Человек, который в 2010ых годах создал игру один. Как в старые добрые времена. Более того, это человек, который породил новый класс игр - после выхода minecraft игры-песочницы заполонилинтернет.
+Создатель майнкрафта, Нотч, стал своего рода легендой. Человек, который в 2010ых годах создал игру один. Как в старые добрые времена. Более того, это человек, который породил новый класс игр - после выхода minecraft игры-песочницы заполонили интернет.
 
 Чем же так подкупает minecraft? Для меня это игра старой школы, с открытой вселенной, живущей по известным правилам. Это кубики для взрослых, с возможностью построить копию ХХС с порталом в подвале, ведущим к маленькой дачке в аду, с видом на лавовый водопад. Это экшн, рпг, алхимия, невероятная фантазия автора и полное отсутствие сюжета.
 
