один из трех велчиайших вещей ==> одна из трех величайших вещей

--- a/source/posts/2012-05-15.md
+++ b/source/posts/2012-05-15.md
@@ -8,7 +8,7 @@
 
 Чем же так подкупает minecraft? Для меня это игра старой школы, с открытой вселенной, живущей по известным правилам. Это кубики для взрослых, с возможностью построить копию ХХС с порталом в подвале, ведущим к маленькой дачке в аду, с видом на лавовый водопад. Это экшн, рпг, алхимия, невероятная фантазия автора и полное отсутствие сюжета.
 
-Простите за такой набор банальностей, но я искренне считаю что minecraft это один из трех велчиайших вещей, случившихся в интернете за последние три года. Многие лета, майнкрафт.
+Простите за такой набор банальностей, но я искренне считаю что minecraft это одна из трех величайших вещей, случившихся в интернете за последние три года. Многие лета, майнкрафт.
 
 И да, я знаю, что пишу о майнкрафте именно сегодня. Дьяблы приходят и уходят, а Майнкрафт - останется.
 
