способ для изготовления презентация --> способ для изготовления презентаций

--- a/source/posts/2012-05-15.md
+++ b/source/posts/2012-05-15.md
@@ -27,7 +27,7 @@
 * [Xamarin выпустили версию Xamarin Designer для Android, встраивающуюся в Visual Studio](http://blog.xamarin.com/2012/05/14/xamarin-designer-for-android-available-for-visual-studio-and-monodevelop/). Теперь модно писать на C# для Android нормально. {mono} {xamarin} {android}
 * [Библиотека, реализующая oauth2, для Action Script](http://blogs.adobe.com/charles/2012/05/oauth-2-0-library-for-actionscript.html). Теперь на флексе будут писать еще больше твиттер-клиентов? {oauth} {actionscript}
 * [В экспериментальных API хрома есть прямая работа с UDP и TCP сокетами](http://blog.alexmaccaw.com/chrome-tcp-udp). Как то я опасаюсь таких экспериментов, если честно. Кто смотрел, скажите, оно с мозилловскими спецификациями хоть на сколько-то пересекается? {chrome} {api}
-* [Илия Григорик пишет о том, что все старые инструменты для презентаций ужасны](http://www.igvita.com/2012/05/14/all-presentation-software-is-broken/). И совершенно верно призывает не плодить ужас в новых. Посоветуйте, какой сейчас самый удобный способ для изготовления презентация на html/css/js? {presentation} {prezi} {html}
+* [Илия Григорик пишет о том, что все старые инструменты для презентаций ужасны](http://www.igvita.com/2012/05/14/all-presentation-software-is-broken/). И совершенно верно призывает не плодить ужас в новых. Посоветуйте, какой сейчас самый удобный способ для изготовления презентаций на html/css/js? {presentation} {prezi} {html}
 * [Разные трюки с `npm`](http://www.devthought.com/2012/02/17/npm-tricks/). Я например не знал, что он поддерживает установку из git. {npm} {nodejs} {javascript}
 
 ## Для гиков
