поправил немного ошибок

--- a/source/posts/2012-05-14.md
+++ b/source/posts/2012-05-14.md
@@ -1,15 +1,15 @@
 # Моё любимое оправдание: "by historical reasons"
 
 Прочитал тут на прошлой неделе
-[интересную заметку Скота Хансельмана](http://www.hanselman.com/blog/TheFloppyDiskMeansSaveAnd14OtherOldPeopleIconsThatDontMakeSenseAnymore.aspx). И задумался. Действительно же, выросло целое поколение людей, которые не понимают метафор, вложенных в нынешние компьютерные интерфейсы. И не смотря на это мы продолжаем их использовать.
+[интересную заметку Скота Хансельмана](http://www.hanselman.com/blog/TheFloppyDiskMeansSaveAnd14OtherOldPeopleIconsThatDontMakeSenseAnymore.aspx). И задумался. Действительно же, выросло целое поколение людей, которые не понимают метафор, вложенных в нынешние компьютерные интерфейсы. И, несмотря на это, мы продолжаем их использовать.
 
-Ну, допустим, самое очевидное - иконка "дискета", означающая "сохранить файл". Ладно, все просто привыкли, новое поколение уже не знает, что такое дискета, но понимает кнопку save. Но ведь на этом все не заканчивается. Почему *radio buttons* называются так, вы знаете? Потому что в радиоприемниках аналоговой эпохи единовременно можно было нажать только одну кнопку. Вот так:
+Ну, допустим, самое очевидное - иконка "дискета", означающая "сохранить файл". Ладно, все просто привыкли, новое поколение уже не знает, что такое дискета, но понимает кнопку save. Но ведь на этом всё не заканчивается. Почему *radio buttons* называются так, вы знаете? Потому что в радиоприемниках аналоговой эпохи единовременно можно было нажать только одну кнопку. Вот так:
 
 >>![center](http://addmeto.cc/images/posts/floppy-shmoppy.jpg)<<
 
 Стоит копнуть дальше - становится еще страшнее. Иконка "положить в закладки", чаще всего показывается как язычек тряпичной закладки в книге. Кто этим пользовался, скажите? Ну, кто этим пользовался _после школы_? Вообще иконка "папка", т.е. "folder". Вы часто в жизни еще встречаете те самые фолдеры, которые изображены на типовой иконке? Ок, давайте дальше. Zoom == лупа. Я последний раз видел лупу лет 15 назад. А вы? Даже иконка "Звонить" в сотовых телефонах чаще всего изображается в виде телефонной трубки середины прошлого века.
 
-Откройте мне тайну: откуда и зачем всё это? Неужели нет нормальных, современных аналогий, позволяющих не думать шаблонами столетней давности? Господа дизайнеры, просветите необразованного гика, откуда такая костность?
+Откройте мне тайну: откуда и зачем всё это? Неужели нет нормальных, современных аналогий, позволяющих не думать шаблонами столетней давности? Господа дизайнеры, просветите необразованного гика, откуда такая косность?
 
 -----
 
