--- a/source/posts/2012-05-15.md
+++ b/source/posts/2012-05-15.md
@@ -8,7 +8,7 @@
 
 Чем же так подкупает minecraft? Для меня это игра старой школы, с открытой вселенной, живущей по известным правилам. Это кубики для взрослых, с возможностью построить копию ХХС с порталом в подвале, ведущим к маленькой дачке в аду, с видом на лавовый водопад. Это экшн, рпг, алхимия, невероятная фантазия автора и полное отсутствие сюжета.
 
-Простите за такой набор банальностей, но я искренне считаю что minecraft это одна из трех величайших вещей, случившихся в интернете за последние три года. Многие лета, майнкрафт.
+Простите за такой набор банальностей, но я искренне считаю, что minecraft — это одна из трех величайших вещей, случившихся в интернете за последние три года. Многие лета, майнкрафт.
 
 И да, я знаю, что пишу о майнкрафте именно сегодня. Дьяблы приходят и уходят, а Майнкрафт - останется.
 
@@ -26,15 +26,15 @@
 * [На мозилле.орг статья о том, как работать с Мозилла Маркетплейс](http://hacks.mozilla.org/2012/05/desktop-apps-with-html5-and-the-mozilla-web-runtime/), точнее о том, как создавать приложения для этой платформы. Статья обзорная, но представление получить можно. {mozilla} {market}
 * [Xamarin выпустили версию Xamarin Designer для Android, встраивающуюся в Visual Studio](http://blog.xamarin.com/2012/05/14/xamarin-designer-for-android-available-for-visual-studio-and-monodevelop/). Теперь модно писать на C# для Android нормально. {mono} {xamarin} {android}
 * [Библиотека, реализующая oauth2, для Action Script](http://blogs.adobe.com/charles/2012/05/oauth-2-0-library-for-actionscript.html). Теперь на флексе будут писать еще больше твиттер-клиентов? {oauth} {actionscript}
-* [В экспериментальных API хрома есть прямая работа с UDP и TCP сокетами](http://blog.alexmaccaw.com/chrome-tcp-udp). Как то я опасаюсь таких экспериментов, если честно. Кто смотрел, скажите, оно с мозилловскими спецификациями хоть на сколько-то пересекается? {chrome} {api}
+* [В экспериментальных API хрома есть прямая работа с UDP и TCP сокетами](http://blog.alexmaccaw.com/chrome-tcp-udp). Как-то я опасаюсь таких экспериментов, если честно. Кто смотрел, скажите, оно с мозилловскими спецификациями хоть на сколько-то пересекается? {chrome} {api}
 * [Илия Григорик пишет о том, что все старые инструменты для презентаций ужасны](http://www.igvita.com/2012/05/14/all-presentation-software-is-broken/). И совершенно верно призывает не плодить ужас в новых. Посоветуйте, какой сейчас самый удобный способ для изготовления презентация на html/css/js? {presentation} {prezi} {html}
-* [Разные трюки с `npm`](http://www.devthought.com/2012/02/17/npm-tricks/). Я например не знал, что он поддерживает установку из git. {npm} {nodejs} {javascript}
+* [Разные трюки с `npm`](http://www.devthought.com/2012/02/17/npm-tricks/). Я, например, не знал, что он поддерживает установку из git. {npm} {nodejs} {javascript}
 
 ## Для гиков
 * [Иногда мне хочется потыкать пальцем. Вот например, люди перешли с node.js на RoR](http://blog.targeterapp.com/post/22984987832/why-we-moved-from-nodejs-to-ror), да еще и хвастаются этим :) {node} {ror} {fun}
-* [А в документации на питоны новая страница - Как использовать Python для веба](http://docs.python.org/release/3.1.5/howto/webservers.html). Понятно что ничего нового, просто удобно давать новичкам, хорошо разжеваны основы. {python} {webdev}
+* [А в документации на питоны новая страница - Как использовать Python для веба](http://docs.python.org/release/3.1.5/howto/webservers.html). Понятно, что ничего нового, просто удобно давать новичкам, хорошо разжеваны основы. {python} {webdev}
 * [Офигенно! Команда `git playback`, создает html файл, который "проигрывает", как изменялся репозиторий в процессе разработки](http://codingfearlessly.com/2012/05/14/git-playback/). Мне понравилось, хотя прикладной смысл пока непонятен. {fun} {git}
-* [Очень фичастый логгер для node.js - winston](https://github.com/flatiron/winston). Мне приглянулся потому что умеет логгить в MongoDB. {nodejs} {logging} {mongo}
+* [Очень фичастый логгер для node.js - winston](https://github.com/flatiron/winston). Мне приглянулся потому, что умеет логгить в MongoDB. {nodejs} {logging} {mongo}
 * [Еще одна статья о том, что PyPy намного лучше, чем CPython2.6](http://mmopy.com/pypy-worth-it/). Открыли звезду, да? {pypy} {python}
 * [Питоновые гринлеты](https://github.com/python-greenlet/greenlet), классические, в стиле Stackless. {python} {stackless}
 * [Странный фреймворк на базе Backbone, для построения одностраничных приложений](http://fahad19.github.com/singool/). Пока не пробовал, думаю проверить на одном маленьком проектике. {backbone} {html} {javascript}
@@ -45,6 +45,4 @@
 
 *P.S. Внезапно решил написать пост перед сном. Теперь спокойной ночи всем :-)*
 
-*P.S. А еще, внезапно, сайт [Радио-Т](http://radio-t.com/) вчера стал недоступен для каждого 4го пользователя корбины-билайна. работы ведутся.*
-
-
+*P.S. А еще, внезапно, сайт [Радио-Т](http://radio-t.com/) вчера стал недоступен для каждого 4-го пользователя корбины-билайна. работы ведутся.*
