some gramma at #18

--- a/source/posts/2012-05-16.md
+++ b/source/posts/2012-05-16.md
@@ -15,7 +15,7 @@
 
 А так же правы и те, кто говорит "у эппла не лучше". Да, у эппла тоже 80% аудитории сидит в одной версии iOS, остальные в разной. Только у эппла эти 80% живут на *последней* прошивке, а не на той, что выпустили 2 года назад.
 
-Я очень надеюсь что что-то поменяется, потому что с версии 4 на адродит уже не так страшно смотреть. Но софта, ориентированного на A4 я почти не вижу. Будем ждать.
+Я очень надеюсь что что-то поменяется, потому что с версии 4 на Android уже не так страшно смотреть. Но софта, ориентированного на A4, я почти не вижу. Будем ждать.
 
 ---
 
